# ObjectRecognition

./: .gitignore  CMakeLists.txt  README.md  plot_embeddings.py
data/training/: objectdb.csv
include/: objectrec.h
src/: classifier.cpp  embedding.cpp  features.cpp  main.cpp  morphology.cpp  segmentation.cpp  threshold.cpp
